--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --watch --require babel-core/register",
+    "test": "jest --watch",
     "build": "webpack"
   },
   "repository": {
@@ -24,8 +24,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "jest": "^23.6.0",
     "jsdom": "^11.6.2",
-    "mocha": "^5.0.1",
     "sinon": "^4.4.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10"
