--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint src/**/**.js --fix"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "jest": "^23.6.0",
     "jsdom": "^11.6.2",
     "sinon": "^4.4.2",
